FLASHPOINT - Created API controller. #30

--- a/NLP Python Jupyter Notebooks/Script - Spacy matching rule - Identify FLASHPOINT - no/Identify FLASHPOINT.ipynb
+++ b/NLP Python Jupyter Notebooks/Script - Spacy matching rule - Identify FLASHPOINT - no/Identify FLASHPOINT.ipynb
@@ -28,34 +28,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "Requirement already satisfied: spacy==2.3.5 in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (2.3.5)\nRequirement already satisfied: thinc<7.5.0,>=7.4.1 in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from spacy==2.3.5) (7.4.5)\nRequirement already satisfied: catalogue<1.1.0,>=0.0.7 in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from spacy==2.3.5) (1.0.0)\nRequirement already satisfied: cymem<2.1.0,>=2.0.2 in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from spacy==2.3.5) (2.0.5)\nRequirement already satisfied: setuptools in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from spacy==2.3.5) (49.2.1)\nRequirement already satisfied: preshed<3.1.0,>=3.0.2 in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from spacy==2.3.5) (3.0.5)\nRequirement already satisfied: murmurhash<1.1.0,>=0.28.0 in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from spacy==2.3.5) (1.0.5)\nRequirement already satisfied: wasabi<1.1.0,>=0.4.0 in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from spacy==2.3.5) (0.8.2)\nRequirement already satisfied: srsly<1.1.0,>=1.0.2 in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from spacy==2.3.5) (1.0.5)\nRequirement already satisfied: tqdm<5.0.0,>=4.38.0 in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from spacy==2.3.5) (4.54.1)\nRequirement already satisfied: numpy>=1.15.0 in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from spacy==2.3.5) (1.19.3)\nRequirement already satisfied: requests<3.0.0,>=2.13.0 in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from spacy==2.3.5) (2.25.1)\nRequirement already satisfied: blis<0.8.0,>=0.4.0 in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from spacy==2.3.5) (0.7.4)\nRequirement already satisfied: plac<1.2.0,>=0.9.6 in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from spacy==2.3.5) (1.1.3)\nRequirement already satisfied: chardet<5,>=3.0.2 in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from requests<3.0.0,>=2.13.0->spacy==2.3.5) (4.0.0)\nRequirement already satisfied: certifi>=2017.4.17 in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from requests<3.0.0,>=2.13.0->spacy==2.3.5) (2020.12.5)\nRequirement already satisfied: urllib3<1.27,>=1.21.1 in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from requests<3.0.0,>=2.13.0->spacy==2.3.5) (1.26.2)\nRequirement already satisfied: idna<3,>=2.5 in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from requests<3.0.0,>=2.13.0->spacy==2.3.5) (2.10)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!pip install -U spacy==2.3.5"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "2.3.5\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import spacy\n",
     "print(spacy.__version__)"
@@ -63,17 +47,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "Requirement already satisfied: numpy==1.19.3 in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (1.19.3)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Had to run this to make something below work.\n",
     "# This is a donwgrade of numpy to a version without a bug.\n",
@@ -83,17 +59,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "False\nTrue\nTrue\nTrue\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def is_float(n):\n",
     "    try:\n",
@@ -113,17 +81,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "False\nTrue\nFalse\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def is_int(n):\n",
     "    try:\n",
@@ -142,28 +102,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "text = \"som 1. januar 2017 eller senere bygges om til å bruke drivstoff med flammepunkt under 60 °C. drevet med brensel med flammepunkt på 43 °C (110 °F) eller mer.\"\n",
-    "options = {\"colors\": {\"FLASHPOINT\": \"darksalmon\", \"TEMERATURE\": \"darkorchid\", \"TEMERATURE_PREFIX\": \"aquamarine\", \"TEMERATURE_SUFFIX\": \"chocolate\"}}"
+    "options = {\"colors\": {\"FLASHPOINT\": \"darksalmon\", \"TEMPERATURE\": \"darkorchid\", \"TEMPERATURE_PREFIX\": \"aquamarine\", \"TEMPERATURE_SUFFIX\": \"chocolate\"}}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "display_data",
-     "data": {
-      "text/plain": "<IPython.core.display.HTML object>",
-      "text/html": "<span class=\"tex2jax_ignore\"><div class=\"entities\" style=\"line-height: 2.5; direction: ltr\">som 1. januar 2017 eller senere bygges om til å bruke drivstoff med \n<mark class=\"entity\" style=\"background: darksalmon; padding: 0.45em 0.6em; margin: 0 0.25em; line-height: 1; border-radius: 0.35em;\">\n    flammepunkt\n    <span style=\"font-size: 0.8em; font-weight: bold; line-height: 1; border-radius: 0.35em; text-transform: uppercase; vertical-align: middle; margin-left: 0.5rem\">FLASHPOINT</span>\n</mark>\n \n<mark class=\"entity\" style=\"background: aquamarine; padding: 0.45em 0.6em; margin: 0 0.25em; line-height: 1; border-radius: 0.35em;\">\n    under\n    <span style=\"font-size: 0.8em; font-weight: bold; line-height: 1; border-radius: 0.35em; text-transform: uppercase; vertical-align: middle; margin-left: 0.5rem\">TEMERATURE_PREFIX</span>\n</mark>\n \n<mark class=\"entity\" style=\"background: darkorchid; padding: 0.45em 0.6em; margin: 0 0.25em; line-height: 1; border-radius: 0.35em;\">\n    60 °C\n    <span style=\"font-size: 0.8em; font-weight: bold; line-height: 1; border-radius: 0.35em; text-transform: uppercase; vertical-align: middle; margin-left: 0.5rem\">TEMERATURE</span>\n</mark>\n. drevet med brensel med \n<mark class=\"entity\" style=\"background: darksalmon; padding: 0.45em 0.6em; margin: 0 0.25em; line-height: 1; border-radius: 0.35em;\">\n    flammepunkt\n    <span style=\"font-size: 0.8em; font-weight: bold; line-height: 1; border-radius: 0.35em; text-transform: uppercase; vertical-align: middle; margin-left: 0.5rem\">FLASHPOINT</span>\n</mark>\n på \n<mark class=\"entity\" style=\"background: darkorchid; padding: 0.45em 0.6em; margin: 0 0.25em; line-height: 1; border-radius: 0.35em;\">\n    43 °C\n    <span style=\"font-size: 0.8em; font-weight: bold; line-height: 1; border-radius: 0.35em; text-transform: uppercase; vertical-align: middle; margin-left: 0.5rem\">TEMERATURE</span>\n</mark>\n (110 °F) \n<mark class=\"entity\" style=\"background: chocolate; padding: 0.45em 0.6em; margin: 0 0.25em; line-height: 1; border-radius: 0.35em;\">\n    eller mer\n    <span style=\"font-size: 0.8em; font-weight: bold; line-height: 1; border-radius: 0.35em; text-transform: uppercase; vertical-align: middle; margin-left: 0.5rem\">TEMERATURE_SUFFIX</span>\n</mark>\n.</div></span>"
-     },
-     "metadata": {}
-    }
-   ],
+   "outputs": [],
    "source": [
     "import spacy\n",
     "from spacy.lang.en import English\n",
@@ -190,7 +141,7 @@
     "    ])\n",
     "\n",
     "matcher.add(\n",
-    "    \"TEMERATURE\",\n",
+    "    \"TEMPERATURE\",\n",
     "    [\n",
     "        [\n",
     "            {'IS_DIGIT': True},\n",
@@ -200,7 +151,7 @@
     "    ])\n",
     "\n",
     "matcher.add(\n",
-    "    \"TEMERATURE_PREFIX\",\n",
+    "    \"TEMPERATURE_PREFIX\",\n",
     "    [\n",
     "        [\n",
     "            {\"LOWER\": {\"IN\": [\"under\", \"over\"]}}\n",
@@ -208,7 +159,7 @@
     "    ])\n",
     "\n",
     "matcher.add(\n",
-    "    \"TEMERATURE_SUFFIX\",\n",
+    "    \"TEMPERATURE_SUFFIX\",\n",
     "    [\n",
     "        \n",
     "        [\n",
@@ -259,25 +210,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "[{'start': 68, 'end': 79, 'label': 'FLASHPOINT'},\n",
-       " {'start': 80, 'end': 85, 'label': 'TEMERATURE_PREFIX'},\n",
-       " {'start': 86, 'end': 91, 'label': 'TEMERATURE'},\n",
-       " {'start': 116, 'end': 127, 'label': 'FLASHPOINT'},\n",
-       " {'start': 131, 'end': 136, 'label': 'TEMERATURE'},\n",
-       " {'start': 146, 'end': 155, 'label': 'TEMERATURE_SUFFIX'}]"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 8
-    }
-   ],
+   "outputs": [],
    "source": [
     "#\n",
     "# Something that must be done \n",
