--- a/NLP Python Jupyter Notebooks/Script - Create title dictionary from text service input/Create title dictionary from text service input.ipynb
+++ b/NLP Python Jupyter Notebooks/Script - Create title dictionary from text service input/Create title dictionary from text service input.ipynb
@@ -36,25 +36,25 @@
      "name": "stdout",
      "text": [
       "Requirement already up-to-date: spacy==2.3.5 in c:\\users\\lars\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (2.3.5)\n",
-      "Requirement already satisfied, skipping upgrade: preshed<3.1.0,>=3.0.2 in c:\\users\\lars\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from spacy==2.3.5) (3.0.5)\n",
-      "Requirement already satisfied, skipping upgrade: setuptools in c:\\users\\lars\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from spacy==2.3.5) (49.2.1)\n",
-      "Requirement already satisfied, skipping upgrade: requests<3.0.0,>=2.13.0 in c:\\users\\lars\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from spacy==2.3.5) (2.25.1)\n",
-      "Requirement already satisfied, skipping upgrade: plac<1.2.0,>=0.9.6 in c:\\users\\lars\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from spacy==2.3.5) (1.1.3)\n",
-      "Requirement already satisfied, skipping upgrade: blis<0.8.0,>=0.4.0 in c:\\users\\lars\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from spacy==2.3.5) (0.7.4)\n",
-      "Requirement already satisfied, skipping upgrade: catalogue<1.1.0,>=0.0.7 in c:\\users\\lars\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from spacy==2.3.5) (1.0.0)\n",
-      "Requirement already satisfied, skipping upgrade: tqdm<5.0.0,>=4.38.0 in c:\\users\\lars\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from spacy==2.3.5) (4.60.0)\n",
       "Requirement already satisfied, skipping upgrade: murmurhash<1.1.0,>=0.28.0 in c:\\users\\lars\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from spacy==2.3.5) (1.0.5)\n",
-      "Requirement already satisfied, skipping upgrade: wasabi<1.1.0,>=0.4.0 in c:\\users\\lars\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from spacy==2.3.5) (0.8.2)\n",
-      "Requirement already satisfied, skipping upgrade: numpy>=1.15.0 in c:\\users\\lars\\appdata\\roaming\\python\\python39\\site-packages (from spacy==2.3.5) (1.19.3)\n",
-      "Requirement already satisfied, skipping upgrade: cymem<2.1.0,>=2.0.2 in c:\\users\\lars\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from spacy==2.3.5) (2.0.5)\n",
-      "Requirement already satisfied, skipping upgrade: thinc<7.5.0,>=7.4.1 in c:\\users\\lars\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from spacy==2.3.5) (7.4.5)\n",
-      "Requirement already satisfied, skipping upgrade: srsly<1.1.0,>=1.0.2 in c:\\users\\lars\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from spacy==2.3.5) (1.0.5)\n",
-      "Requirement already satisfied, skipping upgrade: idna<3,>=2.5 in c:\\users\\lars\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from requests<3.0.0,>=2.13.0->spacy==2.3.5) (2.10)\n",
-      "Requirement already satisfied, skipping upgrade: chardet<5,>=3.0.2 in c:\\users\\lars\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from requests<3.0.0,>=2.13.0->spacy==2.3.5) (4.0.0)\n",
-      "Requirement already satisfied, skipping upgrade: urllib3<1.27,>=1.21.1 in c:\\users\\lars\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from requests<3.0.0,>=2.13.0->spacy==2.3.5) (1.26.4)\n",
-      "Requirement already satisfied, skipping upgrade: certifi>=2017.4.17 in c:\\users\\lars\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from requests<3.0.0,>=2.13.0->spacy==2.3.5) (2020.12.5)\n",
+      "Requirement already satisfied, skipping upgrade: setuptools in c:\\users\\lars\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from spacy==2.3.5) (49.2.1)\n",
+      "Requirement already satisfied, skipping upgrade: blis<0.8.0,>=0.4.0 in c:\\users\\lars\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from spacy==2.3.5) (0.7.4)\n",
       "WARNING: You are using pip version 20.2.3; however, version 21.0.1 is available.\n",
-      "You should consider upgrading via the 'c:\\users\\lars\\appdata\\local\\programs\\python\\python39\\python.exe -m pip install --upgrade pip' command.\n"
+      "You should consider upgrading via the 'c:\\users\\lars\\appdata\\local\\programs\\python\\python39\\python.exe -m pip install --upgrade pip' command.\n",
+      "Requirement already satisfied, skipping upgrade: srsly<1.1.0,>=1.0.2 in c:\\users\\lars\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from spacy==2.3.5) (1.0.5)\n",
+      "Requirement already satisfied, skipping upgrade: catalogue<1.1.0,>=0.0.7 in c:\\users\\lars\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from spacy==2.3.5) (1.0.0)\n",
+      "Requirement already satisfied, skipping upgrade: preshed<3.1.0,>=3.0.2 in c:\\users\\lars\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from spacy==2.3.5) (3.0.5)\n",
+      "Requirement already satisfied, skipping upgrade: tqdm<5.0.0,>=4.38.0 in c:\\users\\lars\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from spacy==2.3.5) (4.60.0)\n",
+      "Requirement already satisfied, skipping upgrade: requests<3.0.0,>=2.13.0 in c:\\users\\lars\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from spacy==2.3.5) (2.25.1)\n",
+      "Requirement already satisfied, skipping upgrade: thinc<7.5.0,>=7.4.1 in c:\\users\\lars\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from spacy==2.3.5) (7.4.5)\n",
+      "Requirement already satisfied, skipping upgrade: plac<1.2.0,>=0.9.6 in c:\\users\\lars\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from spacy==2.3.5) (1.1.3)\n",
+      "Requirement already satisfied, skipping upgrade: wasabi<1.1.0,>=0.4.0 in c:\\users\\lars\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from spacy==2.3.5) (0.8.2)\n",
+      "Requirement already satisfied, skipping upgrade: cymem<2.1.0,>=2.0.2 in c:\\users\\lars\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from spacy==2.3.5) (2.0.5)\n",
+      "Requirement already satisfied, skipping upgrade: numpy>=1.15.0 in c:\\users\\lars\\appdata\\roaming\\python\\python39\\site-packages (from spacy==2.3.5) (1.19.3)\n",
+      "Requirement already satisfied, skipping upgrade: chardet<5,>=3.0.2 in c:\\users\\lars\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from requests<3.0.0,>=2.13.0->spacy==2.3.5) (4.0.0)\n",
+      "Requirement already satisfied, skipping upgrade: certifi>=2017.4.17 in c:\\users\\lars\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from requests<3.0.0,>=2.13.0->spacy==2.3.5) (2020.12.5)\n",
+      "Requirement already satisfied, skipping upgrade: urllib3<1.27,>=1.21.1 in c:\\users\\lars\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from requests<3.0.0,>=2.13.0->spacy==2.3.5) (1.26.4)\n",
+      "Requirement already satisfied, skipping upgrade: idna<3,>=2.5 in c:\\users\\lars\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from requests<3.0.0,>=2.13.0->spacy==2.3.5) (2.10)\n"
      ]
     }
    ],
@@ -1086,7 +1086,8 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Brann, maskineri og elektro\nOljefyrt ovn\n"
+      "Brann, maskineri og elektro\n",
+      "Oljefyrt ovn\n"
      ]
     }
    ],
@@ -1101,12 +1102,12 @@
     "%autoreload 2\n",
     "import importlib\n",
     "import create_title_dictionary_from_text_service_input\n",
-    "from create_title_dictionary_from_text_service_input import create_dictionary\n",
+    "from create_title_dictionary_from_text_service_input import fetch_titles_from_text_service_input\n",
     "importlib.reload(create_title_dictionary_from_text_service_input)\n",
     "\n",
     "#####\n",
     "\n",
-    "result_in_dictionary = create_dictionary(text_service_chapter_input['title'],text_service_chapter_input['sections'])\n",
+    "result_in_dictionary = fetch_titles_from_text_service_input(text_service_chapter_input['title'],text_service_chapter_input['sections'])\n",
     "print(result_in_dictionary['chapter_title'])\n",
     "section_titles_in_dictionary = result_in_dictionary['section_title_in_dictionary']\n",
     "print(section_titles_in_dictionary['/regulation/2013/11/22/1404/chapter/3/section/9/part/1/subpart/1'])"
